crates/lib/tests/sources/messages-missing-resource.stderr
error: Error processing resource: Error reading resource $DIR/tests/resources/simple-it.ftl
 --> tests/sources/messages-missing-resource.rs:7:9
  |
7 |         ("tests/resources/simple-it.ftl", "it")],
  |         ^
